syntax = "proto3";

package proto.category.v1;

option go_package = "example/pb/proto/category/v1;category";

message Category {
    int32 id = 1;
    string name = 2;
}

message CreateCategoryRequest {
    string name = 1;
}

message CreateCategoryResponse {
    Category category = 1;
}

message GetCategoryRequest {
    int32 id = 1;
}

message GetCategoryResponse {
    Category category = 1;
}

message ListCategoriesRequest {}

message ListCategoriesResponse {
    repeated Category categories = 1;
}

message UpdateCategoryRequest {
    int32 id = 1;
    string name = 2;
}

message UpdateCategoryResponse {
    Category category = 1;
}

message DeleteCategoryRequest {
    int32 id = 1;
}

message DeleteCategoryResponse {
    bool success = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
    rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse);
    rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
    rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
    rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse);
}